// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary renders children when no error occurs 1`] = `
<div>
  <div>
    Test Content
  </div>
</div>
`;

exports[`ErrorBoundary renders custom fallback when provided 1`] = `
<div>
  <div>
    Custom Error UI
  </div>
</div>
`;

exports[`ErrorBoundary renders fallback UI when an error occurs 1`] = `
<div>
  <div
    class="error-boundary"
  >
    <h2>
      Something went wrong
    </h2>
    <p>
      Please refresh the page to try again.
    </p>
    <details>
      <summary>
        Error Details
      </summary>
      <pre>
        Error: Test error
      </pre>
    </details>
  </div>
</div>
`;
